{
    "name": "TouchInput",
    "maps": [
        {
            "name": "Touch",
            "id": "91ce6746-a1c1-4663-92b1-88cae5b4f560",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "6b0e99dc-699a-47f8-a663-a4365f1df399",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "d9375152-d0cc-4e4e-8533-042ba8207a7b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchHold",
                    "type": "Button",
                    "id": "c98e58da-e8c0-409e-8e8f-c466c9fbee9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1,pressPoint=0.5)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "04a8a645-b0ca-43ac-8011-9d164cc04a24",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b07d454-9fdb-4778-adf7-3ba5312d5e0e",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76a24f96-ec0c-4670-aaa8-c0e74ab49afb",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": []
        }
    ]
}